added y parameter to query