@@ -86,22 +86,25 @@ public class WorkloadGenerator {
         int dynamicPolicySize = (int) Math.floor(sizeOfPolicies/3);
         int windowSize = 10;
         int generatedQueries = 0;
-        boolean cachingFlag = true;
+        int yQuery = 2;
+        boolean cachingFlag = false;
         LinkedList<QueryStatement> queryWindow = new LinkedList<>();
-//        System.out.println(dynamicPolicySize);
+//        System.out.println(dynami
+//
+//        cPolicySize);
 
         QueryStatement query = new QueryStatement();
         Random random = new Random();
         int batchSize = 2;
         List<QueryStatement> batchQueries = new ArrayList<>();
 
-        CircularHashMap<String,Timestamp> timestampDirectory = new CircularHashMap<>(1134);
-        ClockHashMap<String, GuardExp> clockHashMap = new ClockHashMap<>(1134);
+        CircularHashMap<String,Timestamp> timestampDirectory = new CircularHashMap<>(320);
+        ClockHashMap<String, GuardExp> clockHashMap = new ClockHashMap<>(320);
         CircularHashMap<String, Integer> countUpdate = new CircularHashMap<>(400);
 
         Writer writer = new Writer();
         StringBuilder result = new StringBuilder();
-        String fileName = "SU_C_S20P1Q_80.txt";
+        String fileName = "dummy_N_S20P1Q.txt";
 
         boolean first = true;
 
@@ -192,26 +195,28 @@ public class WorkloadGenerator {
 //                }
 
 //                Steady State
-                if(generatedQueries<18218){
-                    if (generatedQueries % 2 == 0){
-                        if(queryWindow.size() < windowSize){
-                            queryWindow.add(queries.remove(0));
+                for (int i=0; i<yQuery; i++){
+                    if(generatedQueries<3153){
+                        if (generatedQueries % 2 == 0){
+                            if(queryWindow.size() < windowSize){
+                                queryWindow.add(queries.remove(0));
+                            }else{
+                                queryWindow.removeFirst();
+                                queryWindow.add(queries.remove(0));
+                            }
+                            query = queryWindow.getLast();
                         }else{
-                            queryWindow.removeFirst();
-                            queryWindow.add(queries.remove(0));
+                            int index = random.nextInt(queryWindow.size());
+                            query = queryWindow.get(index);
                         }
-                        query = queryWindow.getLast();
-                    }else{
-                        int index = random.nextInt(queryWindow.size());
-                        query = queryWindow.get(index);
-                    }
-                    generatedQueries++;
-                    result.append(currentTime).append(",")
-                            .append(query.toString()).append("\n");
-                    String querier = e.runExperiment(query);
-               ca.runAlgorithm(clockHashMap, querier, query, timestampDirectory);
-//                    cme.runAlgorithm(clockHashMap, querier, query, timestampDirectory);
+                        generatedQueries++;
+                        result.append(currentTime).append(",")
+                                .append(query.toString()).append("\n");
+                        String querier = e.runExperiment(query);
+                        ca.runAlgorithm(clockHashMap, querier, query, timestampDirectory);
+//                        cme.runAlgorithm(clockHashMap, querier, query, timestampDirectory);
 //                baseline1.runAlgorithm(clockHashMap, querier, query, timestampDirectory, countUpdate);
+                    }
                 }
 
 
@@ -323,25 +328,27 @@ public class WorkloadGenerator {
 //                }
 
 //                Steady State
-                if(generatedQueries<=18218){
-                    if (generatedQueries % 2 == 0){
-                        if(queryWindow.size() < windowSize){
-                            queryWindow.add(queries.remove(0));
+                for (int i=0; i<yQuery; i++){
+                    if(generatedQueries<=18218){
+                        if (generatedQueries % 2 == 0){
+                            if(queryWindow.size() < windowSize){
+                                queryWindow.add(queries.remove(0));
+                            }else{
+                                queryWindow.removeFirst();
+                                queryWindow.add(queries.remove(0));
+                            }
+                            query = queryWindow.getLast();
                         }else{
-                            queryWindow.removeFirst();
-                            queryWindow.add(queries.remove(0));
+                            int index = random.nextInt(queryWindow.size());
+                            query = queryWindow.get(index);
                         }
-                        query = queryWindow.getLast();
-                    }else{
-                        int index = random.nextInt(queryWindow.size());
-                        query = queryWindow.get(index);
+                        generatedQueries++;
+                        result.append(currentTime).append(",")
+                                .append(query.toString()).append("\n");
+                        String querier = e.runExperiment(query);
+                        GuardExp GE = ca.SieveGG(querier, query);
+                        String answer = e.runGE(querier, query, GE);
                     }
-                    generatedQueries++;
-                    result.append(currentTime).append(",")
-                            .append(query.toString()).append("\n");
-                    String querier = e.runExperiment(query);
-                    GuardExp GE = ca.SieveGG(querier, query);
-                    String answer = e.runGE(querier, query, GE);
                 }
 
 //                System.out.println(GE);
@@ -423,7 +430,7 @@ public class WorkloadGenerator {
 //        }
 //        System.out.println();
 
-        int queryCount = 9110;
+        int queryCount = 1576;
         boolean[] templates = {true, true, false, false};
         List<QueryStatement> queries = new ArrayList<>();
         for (int i = 0; i < templates.length; i++) {
